# DumpAndFindSign

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: manager.h  utils.h
src/: dllmain.cpp  manager.cpp
